fix alignment issues

--- a/resources/sass/sidebar.sass
+++ b/resources/sass/sidebar.sass
@@ -10,9 +10,9 @@
       font-size: $size-medium
       color: $primary
       display: flex
-      align-items: center
+      align-items: flex-start
       font-weight: 700
-      line-height: 1.3
+      line-height: 1.2
       .icon
         margin-right: 5px
     .subtitle
@@ -32,6 +32,8 @@
       margin-right: 5px
       width: 24px
       height: 24px
+      flex-grow: 0
+      flex-shrink: 0
   .sidebar_title
     .title
       font-weight: bold
